--- a/playground/laravel_10_explore/Dockerfile
+++ b/playground/laravel_10_explore/Dockerfile
@@ -9,3 +9,5 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 WORKDIR /app
 COPY . .
 RUN composer install
+
+ENTRYPOINT ["php", "artisan", "serve", "--host", "0.0.0.0"]
