--- a/playground/laravel_10_explore/Dockerfile
+++ b/playground/laravel_10_explore/Dockerfile
@@ -10,4 +10,4 @@ WORKDIR /app
 COPY . .
 RUN composer install
 
-ENTRYPOINT ["php", "artisan", "serve", "--host", "0.0.0.0"]
+ENTRYPOINT php artisan serve --host 0.0.0.0
