--- a/playground/laravel_10_explore/docker-compose.yml
+++ b/playground/laravel_10_explore/docker-compose.yml
@@ -7,7 +7,7 @@ services:
         tty: true
         working_dir: /app
         ports:
-            - '${APP_FRONT_PORT:-8087}:5173'
+            - '${APP_FRONT_PORT:-8087}:${APP_FRONT_PORT:-8087}'
         command: sh -c "npm run dev -- --host 0.0.0.0"
     app:
         build:
