Docker compose add front end

--- a/playground/laravel_10_explore/docker-compose.yml
+++ b/playground/laravel_10_explore/docker-compose.yml
@@ -12,6 +12,12 @@ services:
             - mysql
             - redis
             - mongo
+    app_front:
+        image: node:18
+        tty: true
+        volumes:
+            - '.:/app'
+        working_dir: /app
     mysql:
         image: 'mysql/mysql-server:8.0'
         ports:
