--- a/playground/laravel/Dockerfile
+++ b/playground/laravel/Dockerfile
@@ -5,6 +5,6 @@ RUN curl -sS https://getcomposer.org/installer | php -- \
 
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-WORKDIR /app
+WORKDIR /app/playground/laravel
 COPY . .
 RUN composer install
